# xlang

./: .gitignore  CMakeLists.txt  README.md  main.cpp
parser/: CodeFile.cpp  CodeFile.h  Parser.cpp  Parser.h  TokenParser.cpp  TokenParser.h
parser/compiler/: Compiler.cpp  Compiler.h  InstructionValidator.cpp  InstructionValidator.h  StrongTarget.cpp  StrongTarget.h  Target.cpp  Target.h  WeakTarget.cpp  WeakTarget.h
parser/compiler/assemblers/: AssemblerBase.cpp  AssemblerBase.h  InstructionAssembler.h  NasmAssembler.cpp  NasmAssembler.h  NasmX86Assembler.cpp  NasmX86Assembler.h
parser/compiler/assemblers/x86/: NasmX86Assembler.cpp  NasmX86Assembler.h  X86AssignInstruction.h  X86CallInstruction.h  X86JmpInstruction.h
parser/compiler/assemblers/x86_instructions/: X86AssignInstruction.h  X86CallInstruction.h  X86JmpInstruction.h
parser/compiler/instructions/: AssignInstruction.h  CallInstruction.cpp  CallInstruction.h  Instruction.h  JmpInstruction.cpp  JmpInstruction.h  ReturnInstruction.h
parser/interpreter/: Assembler.cpp  Assembler.h  CodeFile.cpp  CodeFile.h  Container.cpp  Container.h  Data.cpp  Data.h  Function.cpp  Function.h  Module.cpp  Module.h  Parser.cpp  Parser.h  Scope.cpp  Scope.h  Structure.cpp  Structure.h  TokenParser.cpp  TokenParser.h  Variable.cpp  Variable.h  VariableLink.h
parser/interpreter/instructions/: CallInstruction.cpp  CallInstruction.h  Instruction.cpp  Instruction.h  JmpInstruction.cpp  JmpInstruction.h
utils/: Utils.cpp  Utils.h  non_copyable.h
